# CRMproject

./: .gitignore  Architecture.mmd  README.md  pyproject.toml  requirements.txt
protos/: accounts.proto  generate_code.txt
src/: main.py
src/controllers/: AccountsController.py
src/services/: AccountsService.py
